--- a/Electronics_ServiceRobot_F407VGT6.ioc
+++ b/Electronics_ServiceRobot_F407VGT6.ioc
@@ -49,7 +49,7 @@ Dma.USART2_RX.0.Priority=DMA_PRIORITY_LOW
 Dma.USART2_RX.0.RequestParameters=Instance,Direction,PeriphInc,MemInc,PeriphDataAlignment,MemDataAlignment,Mode,Priority,FIFOMode
 FREERTOS.FootprintOK=true
 FREERTOS.IPParameters=Tasks01,configUSE_NEWLIB_REENTRANT,FootprintOK
-FREERTOS.Tasks01=joys_imuTask,0,128,Startjoys_imuTask,Default,NULL,Dynamic,NULL,NULL;rosserialTask,0,512,StartrosserialTask,Default,NULL,Dynamic,NULL,NULL;out_motorTask,0,128,Startout_motorTask,Default,NULL,Dynamic,NULL,NULL
+FREERTOS.Tasks01=joys_imuTask,0,128,Startjoys_imuTask,Default,NULL,Dynamic,NULL,NULL;rosserialTask,0,2048,StartrosserialTask,Default,NULL,Dynamic,NULL,NULL;out_motorTask,0,128,Startout_motorTask,Default,NULL,Dynamic,NULL,NULL
 FREERTOS.configUSE_NEWLIB_REENTRANT=1
 File.Version=6
 GPIO.groupedBy=Group By Peripherals
@@ -475,6 +475,8 @@ SH.S_TIM9_CH1.0=TIM9_CH1,PWM Generation1 CH1
 SH.S_TIM9_CH1.ConfNb=1
 SH.S_TIM9_CH2.0=TIM9_CH2,PWM Generation2 CH2
 SH.S_TIM9_CH2.ConfNb=1
+TIM1.CounterMode=TIM_COUNTERMODE_UP
+TIM1.IPParameters=CounterMode
 TIM12.Channel-PWM\ Generation1\ CH1=TIM_CHANNEL_1
 TIM12.Channel-PWM\ Generation2\ CH2=TIM_CHANNEL_2
 TIM12.IPParameters=Prescaler,Period,Channel-PWM Generation1 CH1,Channel-PWM Generation2 CH2
@@ -488,6 +490,8 @@ TIM2.Period=65535
 TIM7.IPParameters=Period,Prescaler
 TIM7.Period=200-1
 TIM7.Prescaler=4000-1
+TIM8.CounterMode=TIM_COUNTERMODE_UP
+TIM8.IPParameters=CounterMode
 TIM9.Channel-PWM\ Generation1\ CH1=TIM_CHANNEL_1
 TIM9.Channel-PWM\ Generation2\ CH2=TIM_CHANNEL_2
 TIM9.IPParameters=Prescaler,Period,Channel-PWM Generation1 CH1,Channel-PWM Generation2 CH2
